--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Hello, world!</title>
+    <title>Gumstackclone</title>
   </head>
   <body>
     <!-- Landing Page -->
